--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,10 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: 'n'
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          entrypoint: /home/runner/work/Learn-PWA/data-liga
+          entrypoint: ./data-liga/
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FOOTBALL_LEAGUE_68E18 }}'
           projectId: football-league-68e18
